added ethereum endpoints
